Bug 2240 - /etc/init.d/xprint uses /usr/bin/tr the wrong way
Summary: /etc/init.d/xprint uses /usr/bin/tr the wrong way
Status: RESOLVED FIXED
Alias: None
Product: xprint
Classification: Unclassified
Component: Server: Config: startup scripts (show other bugs)
Version: unspecified
Hardware: All All
: high major
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-08 16:22 UTC by Roland Mainz
Modified: 2005-01-23 00:29 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
[FIXED_X11R68x] Patch for 2005-01-08-trunk (4.83 KB, patch)
2005-01-08 16:36 UTC, Roland Mainz
roland.mainz: 6.8-branch+
Details | Splinter Review

Description Roland Mainz 2005-01-08 16:22:51 UTC
[Originally reported in various Debian bug reports, including Debian bug #258419
and Debian bug #264983]
/etc/init.d/xprint uses /usr/bin/tr to translate font paths into font lists and
backwards using the wrong way - the used "[\n]" expression is neither correct
nor portable.
Comment 1 Roland Mainz 2005-01-08 16:36:27 UTC
Created attachment 1642 [details] [review]
[FIXED_X11R68x] Patch for 2005-01-08-trunk
Comment 2 Roland Mainz 2005-01-08 16:38:43 UTC
Patch checked-in into Xorg trunk:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.647; previous revision: 1.646
/cvs/xorg/xc/programs/Xserver/Xprint/etc/init.d/xprint.cpp,v  <--  xprint.cpp
new revision: 1.3; previous revision: 1.2
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 3 Roland Mainz 2005-01-08 16:41:14 UTC
Patch checked-in into xprint_packagertest_20041217 packager test branch:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.614.2.2; previous revision: 1.614.2.1
/cvs/xorg/xc/programs/Xserver/Xprint/etc/init.d/xprint.cpp,v  <--  xprint.cpp
new revision: 1.2.14.1; previous revision: 1.2
Mailing the commit message to xorg-commit@lists.freedesktop.org...

Marking bug as FIXED.
Comment 4 Roland Mainz 2005-01-08 16:43:22 UTC
Comment on attachment 1642 [details] [review]
[FIXED_X11R68x] Patch for 2005-01-08-trunk

Requesting approval for X11R6.8.x stable branch.

The patch fixes a small shell script portability issue which may lead to
unwanted effects, usually lost font path elements.
Comment 5 Roland Mainz 2005-01-23 19:25:27 UTC
Comment on attachment 1642 [details] [review]
[FIXED_X11R68x] Patch for 2005-01-08-trunk

Patch approved for commit into X11R6.8.x stable branch in the 2005-01-14
release-wranglers phone call.
Comment 6 Roland Mainz 2005-01-23 19:29:42 UTC
Comment on attachment 1642 [details] [review]
[FIXED_X11R68x] Patch for 2005-01-08-trunk

Patch checked-in into X11R6.8.x stable branch:
/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.128; previous revision: 1.365.2.127
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/Xprint/etc/init.d/xprint.cpp,v  <--  xprint.cpp
new revision: 1.2.2.1; previous revision: 1.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.