//bugs.freedesktop.org/show_bug.cgi?id=2240) attachment #1642     (https://bugs.freedesktop.org/attachment.cgi?id=1642): Fix incorrect     usage of /usr/bin/tr in startup script (the used "[\n]" is neither     correct or portable, using "\n" seems to be sufficient (this fixes     various "random" issues, including including Debian bug #258419 and     Debian bug #264983). Patch by Drew Parsons <dparsons@debian.org>.